--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "order-summary",
-  "homepage": "http://AccessEleanorJohnson.github.io/FMOrderSummaryApp",
+  "homepage": "http://accesseleanorjohnson.github.io/FMOrderSummaryApp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
