--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -b main -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -41,7 +41,6 @@
   "devDependencies": {
     "autoprefixer": "^10.4.2",
     "gh-pages": "^3.2.3",
-    "postcss": "^8.4.8",
-    "tailwindcss": "^3.0.23"
+    "postcss": "^8.4.8"
   }
 }
