--- a/package.json
+++ b/package.json
@@ -39,8 +39,9 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.2",
+    "autoprefixer": "^10.4.4",
     "gh-pages": "^3.2.3",
-    "postcss": "^8.4.8"
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.23"
   }
 }
